# kartr

./: .gitignore  README.md  __main__.py  cli.py  core.py  llm.py  pyproject.toml  setup.cfg  setup.py
kartr/: __main__.py  _version.py  cli.py  core.py  github_manager.py  llm.py  plugin_manager.py  web.py
kartr/templates/: index.html
plugins/: hello.py
