[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kartr"
dynamic = ["version"]
description = "An AI-driven development environment"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "durapensa", email = "durapensa@gmail.com"}
]
dependencies = [
    "aiohttp==3.7.4",
    "click==8.1.3",
    "python-dotenv==1.0.0",
    "GitPython==3.1.31",
    "anthropic==0.3.8",
    "aiohttp-jinja2==1.5",
    "jinja2==3.1.2",
]

[project.scripts]
kartr = "kartr.__main__:main"

[tool.setuptools_scm]
write_to = "kartr/_version.py"

[tool.setuptools.packages.find]
include = ["kartr", "kartr.*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
