[metadata]
name = kartr
version = 0.1.0
description = An AI-driven development environment
long_description = file: README.md
long_description_content_type = text/markdown
author = durapensa
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.11
install_requires =
    aiohttp==3.8.4
    click==8.1.3
    python-dotenv==1.0.0
    GitPython==3.1.31
    anthropic==0.3.8

[options.entry_points]
console_scripts = 
    kartr = kartr.__main__:main
